# ADAS-2D-Cpp

./: .gitignore  CMakeLists.txt  README.md  adas_ui.h  adasthread.cpp  adasthread.h  circular_buffer.h  main.cpp  showvideo.cpp  showvideo.h  videodevice.cpp  videodevice.h
models/: pedestrian-and-vehicle-detector-adas-0001.xml
ui/: svm.ui  svm2.ui  svm_1080p.ui  ui_compile.sh
